@@ -12,6 +12,10 @@ AntBuilderTest:
 * Removed test for Ant 1.4 logfile containing invalid processing instruction, since it could fail the build with some XML Parsers.
   Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x
 
+contrib:
+----------------------
+* added build.xml for XmlLoggerWithStatus, minor change to readme. Patch by Brad Clarke
+
 cruisecontrol.sh:
 ----------------------
 * handle path conversion under cygwin. Patch by John Woodward
